# altDotlauncher

./: .gitignore  Cargo.toml  README.md  dependencies
src/: index.html  main.rs
src/markers/: notes.algae
src/web/: index.html  index.php  script.js  style.css  styles.css
src/web/calendar_notes/: 2025-06.json
src/web/markdown_files/: ok.md
