[package]
name = "moss"
version = "1.2.0"
edition = "2021"
authors = ["ekahPruthvi <ekahpdp@gmail.com>"]
description = "A Mossy dynamicLauncher"
license = "GPL-3.0"
repository = "https://github.com/ekahPruthvi/moss.git"

[dependencies]
chrono = "0.4.41"
fuzzy-matcher = "0.3.7"
glob = "0.3.2"
groq-api-rust = "0.2.51"
gtk4 = "0.9.6"
tokio = { version = "1.45.0", features = ["full"] }
vte4 = "0.8.0"
